--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "Vili Kinnunen",
   "license": "MIT",
   "devDependencies": {
+    "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3"
   }
 }
