Add db support with knex

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,12 @@
         "target": "es5",
         "module": "commonjs",
         "sourceMap": true,
-        "outDir": "dist"
-    }
+        "outDir": "dist",
+        "lib": [
+            "es2015"
+        ]
+    },
+    "include": [
+        "./src/*"
+    ]
 }
