--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
+    "@types/knex": "^0.14.19",
     "jest": "^23.4.2",
     "ts-jest": "^23.0.1",
     "ts-node": "^7.0.0",
@@ -22,7 +23,9 @@
   },
   "dependencies": {
     "dotenv": "^6.0.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "knex": "^0.15.2",
+    "sqlite3": "^4.0.2"
   },
   "jest": {
     "transform": {
